--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
   "name": "URTab  - Customize UR Tab ",
-  "version": "1.0",
-  "description": "Customize your tab with any image, GIF, or video.",
+  "version": "1.1",
+  "description": "Customize your tab's background with any image, GIF, or video.",
   "chrome_url_overrides": {
     "newtab": "newtab.html"
   },
