--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,7 @@
     "128": "assets/icon.png"
   },
   "action": {
-    "default_popup": "popup.html",
+    "default_popup": "newtab.html",
     "default_icon": "assets/settingsicon.png"
   }
 }
