could be the last
Changes:

Fixed Background Reset to Default:

Added functionality to clear the backgroundKey from chrome.storage.local.

Applied the default background and reloaded the page to reflect changes.

Loading Screen Improvements:

Added a loading screen that persists until the background is fully loaded.

Implemented random loading animations for a dynamic user experience.

Ensured the loading screen works for both page reloads and new background selections.

Settings Menu Sync:

Synced the settings menu with the actual saved values (e.g., background, clock, day, date settings).

Ensured the settings menu reflects the current state of the extension.

Settings Menu Close on Click Outside:

Added functionality to close the settings menu when clicking outside of it.

Background Loading Optimization:

Used Blob URLs for faster loading of custom backgrounds.

Added error handling for failed background loads.

File Size Limit Increased:

Increased the file size limit for custom backgrounds to 200MB.

Code Refactoring:

Organized code into reusable functions (e.g., applyBackground, hideLoadingScreen, applyRandomAnimation).

Improved error handling and logging.

--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,8 @@
     "newtab": "newtab.html"
   },
   "permissions": [
-    "storage"
+    "storage",
+	"unlimitedStorage"
   ],
   "icons": {
     "128": "assets/icon.png"
